--- a/Jama/src/main/webapp/resources/css/home.css
+++ b/Jama/src/main/webapp/resources/css/home.css
@@ -20,6 +20,7 @@
 	float: right;
 }
 
+/*
 #agreementTable .button-right-column{
 	border-left: none;
 }
@@ -31,3 +32,4 @@
 #agreementTable .button-column{
 	width: 80px;
 }
+*/
