--- a/Jama/src/main/webapp/resources/css/home.css
+++ b/Jama/src/main/webapp/resources/css/home.css
@@ -21,6 +21,7 @@
 }
 
 
+/*
 #agreementTable .button-right-column{
 	border-left: none;
 }
@@ -32,4 +33,4 @@
 #agreementTable .button-column{
 	width: 80px;
 }
-
+*/
