--- a/Jama/src/main/webapp/resources/css/agreementWiz.css
+++ b/Jama/src/main/webapp/resources/css/agreementWiz.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 
-#agreementWiz tr, #agreementWiz td{
+#agreementWiz tr, #agreementWiz td, #agreementEdit tr, #agreementEdit td {
 	border: none;
 }
 
