fix WIP. Vai, Giulio!

--- a/Jama/src/main/webapp/resources/css/table.css
+++ b/Jama/src/main/webapp/resources/css/table.css
@@ -1,7 +1,7 @@
 @CHARSET "UTF-8";
 
 
-#agreementTable .list-row-button, #installmentTable .list-row-button, #agrSchedule .list-row-button{
+#agreementTable .list-row-button, #installmentTable .list-row-button, #agrSchedule .list-row-button, #chiefContractList .list-row-button{
 	height: 20px;
 	width: 30px;
 	display: none;
