--- a/Jama/src/main/webapp/resources/css/home.css
+++ b/Jama/src/main/webapp/resources/css/home.css
@@ -1,18 +1,22 @@
 @CHARSET "UTF-8";
 
-.buttons{
-
+.buttons {
 	display: block;
-	width:200px;
-	margin-top:30px;
-	
+	width: 200px;
+	margin-top: 30px;
 }
 
-.text{
-	
-	font-size:30px;
+.semiEmptyPanel{
+	height: 400px !important;
 }
 
+.saveButton {
+	float: right !important;
+}
+
+.text {
+	font-size: 30px;
+}
 
 /*
 #agreementTable .button-right-column{
