--- a/Jama/src/main/webapp/resources/css/home.css
+++ b/Jama/src/main/webapp/resources/css/home.css
@@ -7,7 +7,11 @@
 }
 
 .semiEmptyPanel{
-	height: 400px !important;
+	min-height: 400px !important;
+}
+
+.relative{
+	position: relative !important;
 }
 
 .saveButton {
