--- a/Jama/src/main/webapp/resources/css/home.css
+++ b/Jama/src/main/webapp/resources/css/home.css
@@ -1,9 +1,24 @@
 @CHARSET "UTF-8";
 
+.ui-panelgrid tr, .ui-panelgrid td {
+	border: none !important;
+}
+
+.center{
+	text-align: center !important;
+	margin:auto !important;
+}
+
+#actionPanel {
+	margin-top:40px !important;
+	width:50%;
+}
+
 .buttons {
-	display: block;
-	width: 200px;
+	width: 150px;
 	margin-top: 30px;
+	 border: 1px outset !important;
+	 height: 90px;
 }
 
 .semiEmptyPanel{
