--- a/Jama/src/main/webapp/resources/css/home.css
+++ b/Jama/src/main/webapp/resources/css/home.css
@@ -7,7 +7,7 @@
 .center {
 	text-align: center !important;
 	margin: auto !important;
-	margin-bottom:30px;
+	margin-bottom:30px !important;
 }
 
 #actionPanel {
