minor changes and fixes

--- a/Jama/src/main/webapp/resources/css/home.css
+++ b/Jama/src/main/webapp/resources/css/home.css
@@ -38,6 +38,11 @@
 	font-size: 30px;
 }
 
+img.center-img{
+	display: block;
+	margin: auto;
+}
+
 /*
 #agreementTable .button-right-column{
 	border-left: none;
