--- a/Jama/src/main/webapp/resources/css/table.css
+++ b/Jama/src/main/webapp/resources/css/table.css
@@ -21,6 +21,10 @@
 	width: 100px !important;
 }
 
+.button-two-column{
+	width: 70px !important;
+}
+
 .button-view-column{
 	width: 40px !important;
 }
